[project]
name = "orch"
version = "0.1.0"
description = "The best toolkit for Discord bot makers"
authors = [
    {name = "kaven",email = "dotexecute853@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
orch = "orch:cli"